<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/ciudades" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/hospedaje" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/comida" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_filter_vintage_black_24dp"
            android:title="@string/descubir" />
    </group>

    <item android:title="@string/action_more">
        <menu>
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_add_shopping_cart_black_24dp"
                android:title="@string/donar"/>

            <item
                android:icon="@drawable/ic_menu_send"
                android:id="@+id/nav_comentarios"
                android:title="@string/action_comentarios" />

            <item

                android:title="@string/acerca"
                android:id="@+id/acerca_de"
                android:icon="@drawable/ic_info_black_24dp"/>
        </menu>
    </item>

</menu>
