<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/bag"
    tools:context="com.robot.maker.tourisapp.CampecheActivity">


    <HorizontalScrollView
        android:id="@+id/nav_cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cam_como_llegar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:padding="10dp"
                android:text="@string/btn_instructions"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btn_campeche_gastronomia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:padding="10dp"
                android:text="@string/btn_gastronomy"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btn_cam_hoteles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:padding="10dp"
                android:text="@string/btn_hotels"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btn_wather_cam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/btn_weather"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_below="@+id/nav_cam"
        android:paddingTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="13dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/campeche" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            app:srcCompat="@drawable/campeche"/>

                        <TextView
                            android:id="@+id/txt_historia1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/historia1_campeche"
                            android:padding="15dp"/>
                        
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/muro"/>
                        
                        <TextView
                            android:id="@+id/txt_historia2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/historia2_campeche"
                            android:padding="15dp"/>
                        <TextView
                            android:id="@+id/txt_historia3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/historia3_campeche"
                            android:padding="15dp"/>

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
