<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bag"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:id="@+id/contenedor_principal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.robot.maker.tourisapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_info_touris"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="13dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/tv_welcome"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/introduccion_a_la_app"
                            android:textAlignment="center" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            app:srcCompat="@drawable/logo_deg" />

                        <Button
                            android:id="@+id/btn_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="@color/cardview_shadow_end_color"
                            android:backgroundTint="@color/cardview_shadow_end_color"
                            android:padding="10dp"
                            android:text="@string/btn_no_ver"
                            android:textColor="@color/leer_mas" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--Info-->
            <android.support.v7.widget.CardView
                android:id="@+id/card_info_aplicacion_caracteristicas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="13dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_caracteristicas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/caracteriscas"
                            android:textAlignment="center"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/caracteriscas_1"
                            android:textAlignment="center" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            app:srcCompat="@drawable/foto" />

                        <Button
                            android:id="@+id/btn_more_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="@color/cardview_shadow_end_color"
                            android:backgroundTint="@color/cardview_shadow_end_color"
                            android:padding="10dp"
                            android:text="@string/btn_read_more"
                            android:textColor="@color/leer_mas" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
